[package]
name = "sherbert"
version = "0.1.0"
edition = "2021"
authors = ["slbsh"]
license = "0BSD"

[dependencies]
# foxhole = { git = "https://github.com/Kay-Conte/foxhole-rs" }
foxhole = { path = "../foxhole-rs" }
mime_guess = "2.0"

[build-dependencies]
comrak = { version = "0.39", default-features = false, features = ["syntect"] }
regex = "1.11"
syntect = "5.2"
walkdir = "2.5"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
debug = false
codegen-units = 1
